修正 财务指标.md

--- a/财务指标.md
+++ b/财务指标.md
@@ -14,6 +14,8 @@
 
 长期资金占重资产比率用于衡量企业的长期稳定资金用来支应固定投资需求状况。其值越大，代表长期债务对重资产杠杆越高，企业越安全。
 
+长期资金占重资产比率(%) =  (股东权益+长期负债) / (固定资产 + 工程物资 + 在建工程)
+
 ![](images/1.jpg)
 
 ### 偿债能力
@@ -36,23 +38,33 @@
 
 ### 运营能力
 
-#### 应收款项周转天数(天)
-
-应收款项周转天数是指企业从取得应收账款的权利到收回款项、转换为现金所需要的时间。它反映了平均收款天数，账期越短则说明回款越快，企业经营压力越小。
-
-应收款项周转天数 = 平均应收账款 × 360天 / 销售收入
-
 #### 应收款项周转率(次/年)
 
 应收款项周转率是指在一定时期内应收账款转化为现金的平均次数。它反映了应收账款当年帮公司做了几轮生意。
 
-应收款项周转率 ＝ 365 / 应收帐款周转天数
+应收款项周转率(次/年) = 营业收入 / （期初应收帐款余额 + 期末应收帐款余额）/2
+
+或
+
+应收款项周转率(次/年) = 营业收入 / 应收账款
+
+#### 应收款项周转天数(天)
+
+也称：收现日数
+
+应收款项周转天数是指企业从取得应收账款的权利到收回款项、转换为现金所需要的时间。它反映了平均收款天数，账期越短则说明回款越快，企业经营压力越小。
+
+应收款项周转天数 = 365/应收账款周转率
 
 #### 存货周转率(次/年)
 
 存货周转率是营业成本与存货总额的百分比。它反映了存货当年帮公司做了几轮生意，越多越好。
 
-存货周转率 = 货物销售成本 / 存货总额
+存货周转率(次/年) = 营业成本 / （期初存货+期末存货）÷2
+
+或
+
+存货周转率(次/年) = 营业成本 / 存货
 
 ![](images/6.jpg)
 
@@ -69,22 +81,34 @@
 
 固定资产周转率又称为固定资产利用率，是指企业年产品销售收入净额与固定资产平均净值的比率。它反映了固定资产当年帮公司做了几轮生意，越多越好。
 
-固定资产周转率 ＝ 产品销售收入净额 / 固定资产平均净值
+固定资产周转率 ＝ 营业收入 / (固定资产值期初净值+固定资产值期末净值)÷2
+
+或
+
+固定资产周转率 ＝ 营业收入 / 固定资产值净值
 
 #### 完整生意周期(天)
 
 完整生意周期反映了一轮完整生意需要经历的天数(从进货到收款)。
 完整生意周期即做生意的完整周期，它指的是一家公司从购买原物料开始、投入生产，到产品制作完成变成库存、存入仓库，过程中要付钱给供应商，以及公司的销售人员将存货卖出去，到最后收到客户的货款，所经历的一个完整周期。
 
-完整生意周期 = 存货在库天数（平均销货日数）+ 平均收现日数
+完整生意周期 = 应收款项周转天数(天) + 存货周转天数(天)
 
 ![](images/7.jpg)
+
+#### 应付款项周转率
+
+应付款项周转率 = 营业成本 / （期初应付账款 + 期末应付账款）÷2
+
+或
+
+应付款项周转率 = 营业成本 / 应付账款
 
 #### 应付款项周转天数(天)
 
 应付款项周转天数又称平均付现期，是衡量公司需要多长时间付清供应商的欠款。它反映了公司可以拖上游供应商的账期，越长越有利。
 
-应付款项周转天数 ＝ 期初期末应付账款平均值 * 360 / 主营业务成本
+应付款项周转天数 ＝ 365 / 应付款项周转率
 
 #### 缺钱天数(天)
 
@@ -99,11 +123,11 @@
 
 总资产周转率反映了当年总共做了几轮生意。
 
-资产周转率
+资产周转率 = 营业收入 / ((期初总资产 + 期末总资产)/2)
 
-= 销售收入 / 平均总资产
+或
 
-= 销售收入 / ((期初资产 + 期末资产)/2)
+资产周转率 = 营业收入 / 总资产
 
 ![](images/4.jpg)
 
@@ -113,28 +137,22 @@
 
 资产回报率(ROA)是指总资产的收益率(股东权益加负债)。 它衡量一家公司从股东权益和负债中产生利润的效率。
 
-资产回报率(%)
-
-= 净收益 / 平均总资产
-
-= 净收益 / ((期初资产 + 期末资产)/2)
+资产回报率(%) = 归属于母公司所有者的净利润 / ((期初总资产 + 期末总资产)/2)
 
 或
 
-资产回报率(%) =
-
-= 净利率 x 总资产周转率
+资产回报率(%) = 归属于母公司所有者的净利润 / 总资产
 
 #### ROE=净资产收益率(%)
 
 净资产收益率(ROE)是指普通股股东应占净收益除以其总股东权益。它反映了总资产的投资回报率。
 净资产收益率是总资产的投资回报率。净资产收益率按净收入除以总资产计算。
 
-净资产收益率 (ROE%)
+净资产收益率 (ROE%) =  归属于母公司所有者的净利润 / ((期初股东权益 + 期末股东权益) / 2)
 
-= 普通股股东应占净收益 / 股东权益
+或
 
-= 净利率 x 总资产周转率 x 杠杆倍数
+净资产收益率 (ROE%) =  归属于母公司所有者的净利润 / 股东权益
 
 ![](images/8.jpg)
 
@@ -142,17 +160,14 @@
 
 资本回报率 ROIC，也称为投入资本回报率、投资资本回报率，是指公司使用资金与相关回报之间的比例。 ROIC 是衡量公司盈利能力的一个指标。
 
-资本回报率 (ROIC%)
-
-= 息税前利润 EBIT x (1 - 税率) / 投入资本
+资本回报率 (ROIC%) = 息税前利润 EBIT x (1 - 税率) / 投入资本
 
 
 #### 税前纯益占实收资本(%)
 
 税前纯益占实收资本比率是指税前纯益占实收资本的百分比。它反映了税前利润相对实收股本倍数。(若税前纯益占实收资本额比率越大，税前利润越大，则公司在本期的利润越大。)
 
-税前纯益占实收资本比率 = 税前纯益 / 总股本 = (营业利润 + 营业外收入 - 营业外支出) / 总股本
-
+税前纯益占实收资本(%) = (营业利润 + 营业外收入 - 营业外支出) / 实收资本(总股本)
 
 #### 毛利率(%)
 
@@ -172,9 +187,11 @@
 
 #### 净利率(%)
 
+净利润率是净利润占营业收入的百分比。
+
 净利，是指企业主营业务收入减去主营业务成本、管理费用、销售费用、财务费用、营业税金及附加、营业外支出、所得税；加上其他业务利润、营业外收入得出的金额。
 
-净利率(%) = 净收入 / 收入
+净利率(%) = 净利 / 营业收入
 
 ![](images/10.jpg)
 
@@ -182,7 +199,7 @@
 
 营业费用率是指从事营业活动所需花费的各项费用在营业收入中的比重。营业费用率反映了公司运营三费(销管财)支出占销售额比率。
 
-营业费用率 = 营业费用 / 营业收入
+营业费用率 = 营业费用(三项费用) / 营业收入
 
 ![](images/11.jpg)
 
@@ -210,19 +227,19 @@
 
 营收增长率是本期主营业务收入与上期主营业务收入之差与上期主营业务收入的比值。营收增长率反映了每年营收增长速度。
 
-营收增长率 ＝ （本期主营业务收入 － 上期主要业务收入）/ 上期主营业务收入
+营收增长率 ＝ (期末主营业务收入 － 期初主要业务收入)/ 上期主营业务收入
 
 #### 营业利润增长率(%)
 
 营业利润增长率又称销售利润增长率，是企业本年营业利润增长额与上年营业利润总额的百分比。它反映了每年营业利润增长速度。
 
-营业利润增长率 = (本年营业利润总额 - 上年营业利润总额) / 上年营业利润总额
+营业利润增长率 = (期末营业利润总额 - 期初营业利润总额) / 上年营业利润总额
 
 #### 净资本增长率(%)
 
 净资本增长率是指企业本期净资产增加额与上期净资产总额的百分比。它反映了企业每年净资产增长速度。
 
-净资本增长率 =（期末净资产 — 期初净资产）/ 期初净资产
+净资本(股东权益=总资产-总负债)增长率(%) = （期末净资产 — 期初净资产）/ 期初净资产
 
 ### 现金流量
 
@@ -238,7 +255,7 @@
 
 现金流量允当比率是存货占总资产的百分比。它反映了近 5 年营收资金满足公司成长的自给自足率。
 
-现金流量允当比率() = 最近5年度营业活动净现金流量 / 最近5年度（资本支出 + 存货増加额+ 现金股利)
+现金流量允当比率(%) = 最近5年 营业活动现金流量 / 最近5年(资本支出 + 存货增加额 + 现金股利)
 
 现金流量允当比率大于100%，也就是说公司最近的五个年度 ，靠正常的营业活动所赚进来的现金流量，大于最近五个年度为了成长所需的资本支出、存货和固定要发给股东的现金股利。现金流量允当比率的数值越大越好。
 
@@ -251,6 +268,10 @@
 现金再投资比率反映了企业当年手上真正能留存下来的现金多少。
 
 现金再投资比率 = (业活动净现金流 - 现金股利) / (固定资产毛额 + 长期投资 + 其他资产 + 运营资金)
+
+或
+
+现金再投资比率(%) =  (营业活动净现金流量 - 筹资活动现金流出) / (总资产 - 流动负债)
 
 ## 资产负债比率
 
