修正 财务指标.md 现金流量允当比率

--- a/财务指标.md
+++ b/财务指标.md
@@ -263,6 +263,8 @@
 
 现金流量指标的分析标准是“比气长，越长越好”，数字越大越好，能够完全满足“大于100／100／10”更好，也就是同时满足现金流量比率 > 100% 、现金流量允当比率 > 100%和现金再投资比率 > 10%。
 
+![](images/15.jpg)
+
 #### 现金再投资比率(%)
 
 现金再投资比率反映了企业当年手上真正能留存下来的现金多少。
