--- a/股票代码说明.md
+++ b/股票代码说明.md
@@ -4,11 +4,11 @@ http://www.sse.com.cn/lawandrules/guide/jyznlc/dealcode/
 
 300 创业板
 
-600，601,603沪市A股
+600，601,603,605沪市A股
 
 900 沪市B股
 
-000 深市A股
+000,001,003 深市A股
 
 002 中小板
 
@@ -21,3 +21,7 @@ http://www.sse.com.cn/lawandrules/guide/jyznlc/dealcode/
 688,787,789科创板
 
 171 沪市地方政府债券
+
+15 深圳证券交易所上市的ETF
+
+51 上海证券交易所上市的ETF
